# wepress

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs  router.rs
src/admin/content/: handler.rs  mod.rs  router.rs
src/api/: mod.rs
src/api/content/: handler.rs  mod.rs  router.rs
src/api/site/: handler.rs  mod.rs  router.rs
src/global/: conf.rs  flag.rs  mod.rs  template.rs
src/router/: admin.rs  api.rs  mod.rs  site.rs  static_file.rs  statics.rs
src/template/: mod.rs
templates/: footer.html  index.html  setup.html  signin.html
templates/admin/: index.html
templates/layout/: app.html
