[package]
name = "wepress"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.1", features = ["full"] }
axum-template = { version = "2.1.0", features = ["tera"] }
lazy_static = "1.4.0"
tera = { version = "1.19.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
clap = { version = "4.5.1", features = ["derive"] }
